--- a/Client/login/CMakeLists.txt
+++ b/Client/login/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB_RECURSE LOGIN_SOURCES CONFIGURE_DEPENDS "*.h" "*.cpp" "*.ui")
 
 add_library(Login OBJECT ${LOGIN_SOURCES})
 target_include_directories(Login PRIVATE include)
-target_link_libraries(Login PRIVATE QtModules CommonInterface)
+target_link_libraries(Login PRIVATE QtModules CommonInterface CustomizeInterface)
 
 add_library(LoginInterface INTERFACE)
 target_include_directories(LoginInterface INTERFACE include)
