--- a/Client/chat/CMakeLists.txt
+++ b/Client/chat/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB_RECURSE CHAT_SOURCES CONFIGURE_DEPENDS "*.h" "*.cpp" "*.ui")
 
 add_library(Chat OBJECT ${CHAT_SOURCES})
 target_include_directories(Chat PRIVATE include)
-target_link_libraries(Chat PRIVATE QtModules CommonInterface LoginInterface)
+target_link_libraries(Chat PRIVATE QtModules CommonInterface CustomizeInterface LoginInterface)
 
 add_library(ChatInterface INTERFACE)
 target_include_directories(ChatInterface INTERFACE include)
