修改服务端文件，主要为配置文件

--- a/Servers/VerifyServer/config.json
+++ b/Servers/VerifyServer/config.json
@@ -1,18 +1,18 @@
 {
     "email": {
       "user": "1335848316@qq.com",
-      "pass": "授权码"
+      "pass": ""
     },
   
     "mysql": {
-      "host": "127.0.0.1",
+      "host": "192.168.88.133",
       "port": 3308,
-      "passwd": "123456."
+      "passwd": "123456"
     },
   
     "redis":{
-      "host": "127.0.0.1",
+      "host": "192.168.88.133",
       "port": 6380,
       "passwd": "123456"
     }
-  }  
+}  
